--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>Welcome to My Website</h1>
+       <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.today.com%2Fhealth%2F18-body-language-clues-say-he-s-interested-definitely-t72476&psig=AOvVaw0x2OAZZP2znN_vgGfktUr1&ust=1717644177444000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIiQ7anBw4YDFQAAAAAdAAAAABAJ" alt="Description of your image">
     </header>
     <nav>
         <ul>
@@ -38,13 +39,10 @@
             <h2>Contact</h2>
             <p>Contact me for any inquiries or feedback.</p>
             <address>
-                Email: info@example.com<br>
+                Email: leo@gmail.com
                 Phone: 123-456-7890
             </address>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 My Simple Website. All rights reserved.</p>
-    </footer>
 </body>
 </html>
