--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Welcome to My Website</h1>
-       <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.today.com%2Fhealth%2F18-body-language-clues-say-he-s-interested-definitely-t72476&psig=AOvVaw0x2OAZZP2znN_vgGfktUr1&ust=1717644177444000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIiQ7anBw4YDFQAAAAAdAAAAABAJ" alt="Description of your image">
+       <img src="" alt="here is a chance">
     </header>
     <nav>
         <ul>
